# mysim

minimal_cpu/: README.md
minimal_cpu/app-business-logic/: CMakeLists.txt
minimal_cpu/app-business-logic/src/: main.c
minimal_cpu/app-peripherals-libs/simulation/: CMakeLists.txt
minimal_cpu/app-peripherals-libs/simulation/src/: simulation_uart.c
minimal_cpu/app-peripherals-libs/stm32f4/cmake/: stm32f4.cmake
minimal_cpu/app-peripherals-libs/stm32f4/src/: stm32f4_uart.c
minimal_cpu/include/: app_uart.h  simulation.h
minimal_cpu/renode/: minimal_cpu.repl  run-minimal-example.resc
minimal_cpu/toolchains/: arm-none-eabi.toolchain.cmake
uart_with_button/: CMakeLists.txt  README.md
uart_with_button/app-business-logic/: CMakeLists.txt
uart_with_button/app-business-logic/src/: main.c
uart_with_button/app-peripherals-libs/stm32f4/: CMakeLists.txt
uart_with_button/app-peripherals-libs/stm32f4/src/: stm32f4_uart.c
uart_with_button/include/: app_uart.h
uart_with_button/renode/: run-uart-example.resc
